--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,11 +22,18 @@ body {
 header {
 	width: 100%;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
 }
 
-header>h1 {
+.placeholder {
+	visibility: hidden;
+	/*The purpose of this element is to balance the header tag so that
+	the h1 tag gets centered*/
+}
+
+header>h1,
+.placeholder {
 	flex-grow: 1;
 	text-align: center;
 }
