--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -40,7 +40,12 @@
 	overflow: auto;
 }
 
-.startDialog>button:first-of-type {
+.startDialog::backdrop {
+	background-color: black;
+	opacity: 0.75;
+}
+
+.exitBtn {
 	--size-btn: 60px;
 	cursor: pointer;
 	position: absolute;
@@ -75,6 +80,11 @@
 	text-align: center;
 	font-size: 1.4rem;
 	margin: 0.2em;
+}
+
+.modalText h4 {
+	text-decoration: underline;
+	text-underline-offset: 5px;
 }
 
 .modalText>p {
