Gave some of the assets their own folders

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-image: url("../../assets/wallpaper.jpg");
+	background-image: url("../../assets/images/wallpaper.jpg");
 	background-size: contain;
 	background-size: cover;
 	background-repeat: repeat;
