--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,7 +8,7 @@ body {
 	background-size: contain;
 	background-size: cover;
 	background-repeat: repeat;
-	font-family: "Pokemon";
+	font-family: "Pokemon", Ubuntu;
 	color: white;
 }
 
