--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -15,6 +15,7 @@
 	width: clamp(200px, 2vw + 21rem, 400px);
 	text-align: center;
 	outline: solid black;
+	cursor: pointer;
 }
 
 .card>* {
@@ -67,6 +68,7 @@
 	justify-content: center;
 	align-items: center;
 	padding: 0.5em;
+	color: blue;
 }
 
 .modalText>img {
