Cards are focusable with keyboard

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -18,6 +18,10 @@
 	cursor: pointer;
 }
 
+.card:focus-visible{
+	background-color: rgba(255, 255, 255, 0.50);
+}
+
 .card>* {
 	width: 50%;
 	align-self: center;
